# leads

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  NOTES.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_unique_lead_email.py  0003_lead_reached_out_at.py  0004_lead_resume_summary.py  0005_lead_profile_score.py  0006_lead_resume_text.py
backend/app/: config.py  db.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  health.py  leads.py
backend/app/core/: errors.py  logging_config.py  middleware.py  security.py
backend/app/models/: __init__.py  lead.py  user.py
backend/app/prompts/: __init__.py  resume.py
backend/app/repositories/: __init__.py  leads.py  users.py
backend/app/schemas/: auth.py  lead.py
backend/app/services/: email.py  leads.py  resume_ai.py
backend/app/storage/: __init__.py  base.py  factory.py  local.py  s3.py
backend/scripts/: entrypoint.sh  seed.py
backend/tests/: conftest.py  test_auth.py  test_leads.py  test_storage.py
docs/: AGENT_USAGE.md  PROMPTS.md  ROADMAP.md  RUNNING.md  SYSTEM_DESIGN.md
frontend/: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  middleware.ts  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/apply/: page.tsx
frontend/components/: dashboard-stats.tsx  lead-detail.tsx  lead-form.tsx  lead-state-badge.tsx  leads-controls.tsx  leads-table.tsx  login-form.tsx  login-modal.tsx  logout-button.tsx  navbar.tsx  pagination.tsx  pending-refresher.tsx  profile-score-badge.tsx  spinner.tsx  status-control.tsx
frontend/lib/: api.ts  auth-actions.ts  current-user.ts  format.ts  leads.ts  session.ts
nginx/: nginx.conf
(+7 files in other folders)
