[project]
name = "leads-backend"
version = "1.0.0"
description = "FastAPI backend for the Leads application"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
