[project]
name = "leads-backend"
version = "1.0.0"
description = "FastAPI backend for the Leads application"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg[binary]==3.2.13",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "email-validator==2.2.0",
    "python-multipart==0.0.20",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "resend==2.5.1",
    "boto3==1.35.90",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "ruff==0.8.4",
]

# Application, not a distributable package — uv installs only the dependencies.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

# FastAPI uses callables (Form/File/Depends/...) as argument defaults by design;
# they are not the mutable defaults B008 is meant to catch.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]
